# TraceTUI

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VERSIONS.md  build.rs
.github/: CODEOWNERS
.github/workflows/: pr_checks.yml  release.yml
docs/: download.html  index.html
docs/css/: style.css
docs/js/: main.js
landing-page/assets/: external_urls.json
landing-page/js/: main.js
resources/: external_urls.json
scripts/: icon_extractor.ps1  installOrUpdate.ps1  installOrUpdate.sh  sync_i18n.py  tracetui.desktop
src/: main.rs  resources.rs
src/app/: analysis.rs  containers.rs  firewall_service.rs  grouping.rs  input.rs  installation.rs  investigation_service.rs  io.rs  mod.rs  nerdfont.rs  risk.rs  storage.rs  types.rs
src/config/: mod.rs
src/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  mod.rs  pt.json  ru.json  translator.rs  zh.json
src/icon/: tracetui.rc
src/services/: api_client.rs  geoip_service.rs  mod.rs
src/utils/: api_builder.rs  db.rs  formatting.rs  icon_extractor.rs  mod.rs  rate_limiter.rs  signatures.rs  whois.rs
test/: mainShould.rs  mod.rs
test/E2E/: analysis_lifecycleShould.rs  export_and_investigationShould.rs  firewall_flowShould.rs
test/app/: analysisShould.rs  analysis_serviceShould.rs  containersShould.rs  firewall_serviceShould.rs  groupingShould.rs  inputShould.rs  installationShould.rs  investigation_serviceShould.rs  ioShould.rs  librariesShould.rs  modShould.rs  nerdfontShould.rs  riskShould.rs  statesShould.rs  storageShould.rs  trendShould.rs  typesShould.rs  (+1 more)
(+50 files in other folders)
