[package]
name = "tracetui"
version = "1.0.0"
edition = "2021"
authors = ["tracetui Team"]
description = "Modern TUI network investigation tool"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
lru = "0.12"
urlencoding = "2.1"
open = "5.0"
image = "0.24"
base64 = "0.21"
ansi-to-tui = "6.0"
reqwest = { version = "0.13.3", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
once_cell = "1.21.4"
arboard = "3"

[build-dependencies]
embed-resource = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
] }
